--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "sass": "^1.81.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
